# grafatui

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GRAFANA_COMPATIBILITY.md  LICENSE  README.md  RELEASE_PROCESS.md  ROADMAP.md  book.toml  cliff.toml  flake.nix  release-plz.toml  test_dashboard.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish-assets.yml  publish-crates-io.yml  release-assets.yml  release-plz.yml  release.yml
docs/: SUMMARY.md  configuration.md  examples.md  exporting-and-recording.md  grafana-compatibility.md  grafana-dashboard-import.md  installation.md  introduction.md  keyboard-and-mouse.md  quick-start.md  troubleshooting.md
examples/: README.md
examples/dashboards/: all_visualizations.json  instant_queries.json  prometheus_demo.json  thresholds_demo.json
examples/demo/: README.md  docker-compose.yml  grafatui.toml  prometheus.yml  vllm_demo.json
examples/demo/vllm/: Dockerfile  mock_vllm.py
prom-stack/: docker-compose.yml
prom-stack/vllm/: grafana.json
src/: app.rs  cli.rs  config.rs  export.rs  grafana.rs  main.rs  prom.rs  theme.rs  ui.rs
src/app/: data.rs  event_loop.rs  input.rs  mod.rs  state.rs  variables.rs
src/ui/: draw.rs  format.rs  layout.rs  mod.rs
src/ui/panels/: bar_gauge.rs  gauge.rs  graph.rs  heatmap.rs  mod.rs  stat.rs  table.rs
src/ui/panels/graph/: autogrid.rs  bounds.rs  labels.rs  mod.rs  overlay.rs  thresholds.rs
tests/: validate_cli.rs
