[package]
name = "grafatui"
version = "0.1.0"
edition = "2024"
description = "A Grafana-like TUI for Prometheus"
license = "Apache-2.0"
repository = "https://github.com/fedexist/grafatui"
keywords = ["tui", "prometheus", "grafana", "monitoring", "terminal"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3.31"
humantime = "2.3.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
reqwest = { version = "0.12.24", features = ["json", "gzip", "brotli", "zstd", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.19"
directories = "5.0.1"
urlencoding = "2.1.3"
